# pymanip

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  Frontend.py  MANIFEST.in  README  README.md  README.rst  SoundInput.py  __init__.py  myplot.py  pixelfly.py  prepare_readme.py  requirements.txt  setup.cfg  setup.py
arduino/gbf/: gbf.ino
doc/: conf.py  environment.yml  index.rst  installation.rst  miscellaneous.rst  requirements.txt
doc/acquisition/: aiodaq.rst  aiodaq_implementation.rst  index.rst  shortcut.rst
doc/cli/: instruments.rst  intro.rst  introspection.rst  live_preview.rst  oscillo.rst  reference.rst
doc/instruments/: aioinstruments.rst  aioinstruments_implementation.rst  instrument_list.rst  instruments.rst  shortcut.rst
doc/sessions/: asyncdata.rst  asyncimplementation.rst  asyncremote.rst  asyncsession.rst  asynctask.rst
doc/video/: advanced.rst  andor.rst  asynchronous.rst  avt.rst  basic.rst  ids.rst  implementation.rst  introduction.rst  (+4 more)
matlab/: ManipInfo.m  ManipLoad.m
pymanip/: Miscellaneous.py  OctMISession.py  Session.py  __init__.py  __main__.py  asyncsession.py  asynctools.py  collection.py  miscellaneous.py  myplot.py  myplotcontrol.xcf  mytime.py  session.py  wheatstone.py
samples/: dc1394_acquisition.py  dc1394_view.py  essai_andor.py  essai_daqmx.py  essai_nisyscfg.py  essai_scope.py  essai_visa.py  lecture_andor.py  pymba_acquisition.py  pymba_acquisition_continuous.py  pymba_view.py
video/: dc1394_view.py  essai_andor.py  lecture_andor.py  opencv_example.py  pymba_view.py
(+93 files in other folders)
