[metadata]
name = pymanip
version = 0.4.4
description = Python framework for experiments
long_description = file: README.rst
license = CeCILL-B
classifier =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
url = https://pypi.org/project/pymanip/
project_urls =
    Documentation = https://pymanip.readthedocs.io/en/latest/
    Source Code = https://github.com/jsalort/pymanip
author = Julien Salort
author_email = julien.salort@ens-lyon.fr

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    h5py
    fluiddyn >= 0.3.2
    fluidlab >= 0.1.0
    progressbar2
    aiohttp
    aiohttp_jinja2
    pyvisa
    sqlalchemy
    qasync
    pytest-asyncio
    aiofile
    aiosqlite
    greenlet
    pyqtgraph
